--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "jest": "^26.1.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.0.5",
+    "react-app-rewired": "^2.1.6",
     "ts-jest": "^26.1.1",
     "typescript": "^3.9.5",
     "wait-on": "^5.0.1",
