Removing import aliases

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,16 +12,7 @@
     "jsx": "react",
     "sourceMap": true,
     "outDir": "./dist",
-    "strict": true ,
-    "esModuleInterop": true,
-    "baseUrl": "./",
-    "paths": {
-      // server:
-      // client:
-      "@components/*": ["src/components/*"],
-      "@styled/*": ["src/styled/*"],
-      "@styles/*": ["src/styles/*"]
-    }
-
+    // "strict": true ,
+    "esModuleInterop": true
   }
 }
